--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "actionapp",
+  "name": "discovr",
   "private": true,
   "description": "A simple starter to get up and developing quickly with Gatsby",
   "version": "0.1.0",
@@ -8,6 +8,7 @@
     "axios": "^0.21.4",
     "babel-plugin-styled-components": "^1.13.2",
     "classnames": "^2.3.1",
+    "firebase": "^8.9.1",
     "formik": "^2.2.9",
     "gatsby": "^3.11.1",
     "gatsby-core-utils": "^2.11.0",
@@ -23,6 +24,7 @@
     "gatsby-plugin-styled-components": "^4.12.0",
     "gatsby-source-filesystem": "^3.11.0",
     "gatsby-source-firestore": "^1.0.3",
+    "gatsby-source-firestore-easy": "^1.0.0",
     "gatsby-transformer-sharp": "^3.11.0",
     "lodash": "^4.17.21",
     "prop-types": "^15.7.2",
